moonbit/internal/ffi/gpui_native.g.h

// @generated by gpui-abi-gen from Rust ABI declarations. Do not edit.
#ifndef GPUI_NATIVE_G_H
#define GPUI_NATIVE_G_H
#include <stdint.h>
#define GPUI_NATIVE_ABI_VERSION 8u
typedef struct NativeArtifactKey NativeArtifactKey;
typedef struct NodeRecord NodeRecord;
typedef struct OpRecord OpRecord;
typedef struct ChildRecord ChildRecord;
typedef struct RenderArena RenderArena;
typedef struct NativeClickEvent NativeClickEvent;
typedef struct NativeResourceCommand NativeResourceCommand;
typedef struct NativeExtensionCommand NativeExtensionCommand;
typedef struct NativeControlEvent NativeControlEvent;
typedef struct NativeApplicationCommand NativeApplicationCommand;
typedef struct NativeThemePayload NativeThemePayload;
typedef struct NativeImageCacheBudget NativeImageCacheBudget;
typedef struct NativeMenuCommand NativeMenuCommand;
typedef struct NativeMenuRecord NativeMenuRecord;
typedef struct ManagedCallbacks ManagedCallbacks;
typedef struct GpuiDotnetApiV3 GpuiDotnetApiV3;
typedef int32_t (*ManagedRenderFn)(uint64_t, RenderArena *, uint32_t *, uint64_t *);
typedef int32_t (*ManagedRenderCompletedFn)(uint64_t, uint64_t, int32_t);
typedef int32_t (*ManagedClickFn)(uint64_t, uint64_t, uint64_t, const NativeClickEvent *);
typedef int32_t (*ManagedListRenderRangeFn)(uint64_t, uint64_t, uint64_t, uint32_t, uint32_t, RenderArena *, uint32_t *, uint64_t *);
typedef int32_t (*ManagedReleaseArtifactFn)(uint64_t, uint64_t, uint64_t, int32_t);
typedef int32_t (*ManagedAcceptArtifactFn)(uint64_t, uint64_t, uint64_t);
typedef int32_t (*ManagedDynamicFrameFn)(uint64_t, uint32_t);
typedef int32_t (*ManagedControlEventFn)(uint64_t, uint64_t, const NativeControlEvent *);
typedef int32_t (*ManagedApplicationStartedFn)(uint64_t);
typedef int32_t (*ManagedWindowClosedFn)(uint64_t, uint64_t, int32_t);
typedef int32_t (*ManagedMenuActionFn)(uint64_t, uint64_t);
typedef int32_t (*ManagedMenuAppliedFn)(uint64_t, uint64_t);
typedef int32_t (*ValidateRenderFn)(const RenderArena *, uint32_t);
typedef int32_t (*RunApplicationFn)(uint64_t, const ManagedCallbacks *);
typedef int32_t (*NotifyViewFn)(uint64_t);
typedef int32_t (*InvalidateArtifactsFn)(uint64_t, const NativeArtifactKey *, int32_t);
typedef int32_t (*DispatchCommandFn)(uint64_t, const NativeResourceCommand *);
typedef int32_t (*DispatchExtensionCommandFn)(uint64_t, const NativeExtensionCommand *);
typedef int32_t (*DispatchApplicationCommandFn)(uint64_t, const NativeApplicationCommand *);
typedef int32_t (*DispatchApplicationMenuFn)(uint64_t, const NativeMenuCommand *);
typedef int32_t (*SupportsExtensionFn)(const uint8_t *, int32_t, uint32_t, uint64_t);
struct NativeArtifactKey {
    uint64_t source;
    uint64_t artifact;
};
struct NodeRecord {
    uint16_t component;
    uint16_t flags;
    uint32_t data_offset;
    uint32_t data_length;
};
struct OpRecord {
    uint32_t node;
    uint16_t code;
    uint16_t value_kind;
    uint64_t a;
    uint64_t b;
};
struct ChildRecord {
    uint32_t parent;
    uint32_t child;
};
struct RenderArena {
    NodeRecord * nodes;
    int32_t node_length;
    int32_t node_capacity;
    OpRecord * ops;
    int32_t op_length;
    int32_t op_capacity;
    ChildRecord * children;
    int32_t child_length;
    int32_t child_capacity;
    uint8_t * utf8;
    int32_t utf8_length;
    int32_t utf8_capacity;
    uint32_t generation;
    uint32_t flags;
    int32_t required_node_capacity;
    int32_t required_op_capacity;
    int32_t required_child_capacity;
    int32_t required_utf8_capacity;
};
struct NativeClickEvent {
    float x;
    float y;
    uint32_t buttons;
    uint32_t modifiers;
};
struct NativeResourceCommand {
    uint32_t owner_view;
    uint16_t resource_kind;
    uint16_t command;
    const uint8_t * key;
    int32_t key_length;
    const uint8_t * data;
    int32_t data_length;
    uint32_t reserved;
    uint64_t a;
    uint64_t b;
};
struct NativeExtensionCommand {
    uint32_t owner_view;
    uint16_t command;
    uint16_t flags;
    uint32_t schema_version;
    uint32_t reserved;
    uint64_t schema_hash;
    uint64_t expected_revision;
    const uint8_t * extension_id;
    int32_t extension_id_length;
    const uint8_t * component_kind;
    int32_t component_kind_length;
    const uint8_t * key;
    int32_t key_length;
    const uint8_t * payload;
    int32_t payload_length;
};
struct NativeControlEvent {
    uint16_t kind;
    uint16_t flags;
    uint32_t reserved;
    uint64_t revision;
    const uint8_t * data;
    int32_t data_length;
    uint32_t reserved2;
};
struct NativeApplicationCommand {
    uint64_t window_id;
    uint16_t command;
    uint16_t flags;
    uint32_t reserved;
    const uint8_t * title;
    int32_t title_length;
    uint32_t reserved2;
    float left;
    float top;
    float width;
    float height;
};
struct NativeThemePayload {
    uint32_t version;
    uint32_t appearance;
    uint32_t background;
    uint32_t text;
    uint32_t text_muted;
    uint32_t text_placeholder;
    uint32_t text_on_accent;
    uint32_t border;
    uint32_t border_variant;
    uint32_t border_focused;
    uint32_t surface_background;
    uint32_t element_background;
    uint32_t element_hover;
    uint32_t element_active;
    uint32_t accent;
    uint32_t info;
    uint32_t info_background;
    uint32_t error;
    uint32_t scrollbar_thumb_background;
    uint32_t scrollbar_track_background;
};
struct NativeImageCacheBudget {
    uint32_t version;
    uint32_t reserved;
    uint64_t max_bytes;
    uint64_t max_entries;
};
struct NativeMenuCommand {
    const NativeMenuRecord * items;
    int32_t item_length;
    uint32_t reserved;
    uint32_t reserved2;
    uint64_t generation;
};
struct NativeMenuRecord {
    uint32_t parent;
    uint16_t kind;
    uint16_t flags;
    uint64_t action_id;
    const uint8_t * title;
    int32_t title_length;
    uint32_t reserved;
};
struct ManagedCallbacks {
    uint32_t struct_size;
    ManagedRenderFn render;
    ManagedClickFn click;
    ManagedListRenderRangeFn list_render_range;
    ManagedControlEventFn control_event;
    ManagedApplicationStartedFn application_started;
    ManagedWindowClosedFn window_closed;
    ManagedMenuActionFn menu_action;
    ManagedDynamicFrameFn dynamic_frame;
    ManagedRenderCompletedFn render_completed;
    ManagedReleaseArtifactFn release_artifact;
    ManagedAcceptArtifactFn accept_artifact;
    ManagedMenuAppliedFn menu_applied;
};
struct GpuiDotnetApiV3 {
    uint32_t struct_size;
    uint32_t abi_version;
    uint64_t schema_hash;
    ValidateRenderFn validate_render;
    RunApplicationFn run_application;
    NotifyViewFn notify_view;
    DispatchCommandFn dispatch_command;
    DispatchApplicationCommandFn dispatch_application_command;
    DispatchApplicationMenuFn dispatch_application_menu;
    SupportsExtensionFn supports_extension;
    DispatchExtensionCommandFn dispatch_extension_command;
    InvalidateArtifactsFn invalidate_artifacts;
};
typedef const GpuiDotnetApiV3 *(*GpuiGetApiFn)(uint32_t);
#endif