src/Gpui/Interop/NativeMethods.g.cs

// <auto-generated />
#nullable enable
// <auto-generated>
// This code is generated by csbindgen.
// DON'T CHANGE THIS DIRECTLY.
// </auto-generated>
#pragma warning disable CS8500
#pragma warning disable CS8981
using System;
using System.Runtime.InteropServices;


namespace Gpui.Interop
{
    internal static unsafe partial class NativeMethods
    {
        const string __DllName = "gpui_dotnet";





        [DllImport(__DllName, EntryPoint = "gpui_dotnet_get_api", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern GpuiDotnetApiV3* gpui_dotnet_get_api(uint requested_version);


    }

    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct NodeRecord
    {
        public ushort component;
        public ushort flags;
        public uint data_offset;
        public uint data_length;
    }

    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct OpRecord
    {
        public uint node;
        public ushort code;
        public ushort value_kind;
        public ulong a;
        public ulong b;
    }

    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct ChildRecord
    {
        public uint parent;
        public uint child;
    }

    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct RenderArena
    {
        public NodeRecord* nodes;
        public int node_length;
        public int node_capacity;
        public OpRecord* ops;
        public int op_length;
        public int op_capacity;
        public ChildRecord* children;
        public int child_length;
        public int child_capacity;
        public byte* utf8;
        public int utf8_length;
        public int utf8_capacity;
        public uint generation;
        public uint flags;
        public int required_node_capacity;
        public int required_op_capacity;
        public int required_child_capacity;
        public int required_utf8_capacity;
    }

    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct NativeClickEvent
    {
        public float x;
        public float y;
        public uint buttons;
        public uint modifiers;
    }

    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct NativeResourceCommand
    {
        public uint owner_view;
        public ushort resource_kind;
        public ushort command;
        public byte* key;
        public int key_length;
        public byte* data;
        public int data_length;
        public uint reserved;
        public ulong a;
        public ulong b;
    }

    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct NativeExtensionCommand
    {
        public uint owner_view;
        public ushort command;
        public ushort flags;
        public uint schema_version;
        public uint reserved;
        public ulong schema_hash;
        public ulong expected_revision;
        public byte* extension_id;
        public int extension_id_length;
        public byte* component_kind;
        public int component_kind_length;
        public byte* key;
        public int key_length;
        public byte* payload;
        public int payload_length;
    }

    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct NativeControlEvent
    {
        public ushort kind;
        public ushort flags;
        public uint reserved;
        public ulong revision;
        public byte* data;
        public int data_length;
        public uint reserved2;
    }

    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct NativeApplicationCommand
    {
        public ulong window_id;
        public ushort command;
        public ushort flags;
        public uint reserved;
        public byte* title;
        public int title_length;
        public uint reserved2;
        public float left;
        public float top;
        public float width;
        public float height;
    }

    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct NativeMenuCommand
    {
        public NativeMenuRecord* items;
        public int item_length;
        public uint reserved;
        public uint reserved2;
    }

    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct NativeMenuRecord
    {
        public uint parent;
        public ushort kind;
        public ushort flags;
        public ulong action_id;
        public byte* title;
        public int title_length;
        public uint reserved;
    }

    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct ManagedCallbacks
    {
        public uint struct_size;
        public delegate* unmanaged[Cdecl]<ulong, RenderArena*, uint*, int> render;
        public delegate* unmanaged[Cdecl]<ulong, ulong, ulong, NativeClickEvent*, int> click;
        public delegate* unmanaged[Cdecl]<ulong, ulong, uint, uint, RenderArena*, uint*, int> list_render_range;
        public delegate* unmanaged[Cdecl]<ulong, ulong, NativeControlEvent*, int> control_event;
        public delegate* unmanaged[Cdecl]<ulong, int> application_started;
        public delegate* unmanaged[Cdecl]<ulong, ulong, int, int> window_closed;
        public delegate* unmanaged[Cdecl]<ulong, ulong, int> menu_action;
        public delegate* unmanaged[Cdecl]<ulong, uint, int> dynamic_frame;
    }

    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct GpuiDotnetApiV3
    {
        public uint struct_size;
        public uint abi_version;
        public ulong schema_hash;
        public delegate* unmanaged[Cdecl]<RenderArena*, uint, int> validate_render;
        public delegate* unmanaged[Cdecl]<ulong, ManagedCallbacks*, int> run_application;
        public delegate* unmanaged[Cdecl]<ulong, int> notify_view;
        public delegate* unmanaged[Cdecl]<ulong, NativeResourceCommand*, int> dispatch_command;
        public delegate* unmanaged[Cdecl]<ulong, NativeApplicationCommand*, int> dispatch_application_command;
        public delegate* unmanaged[Cdecl]<ulong, NativeMenuCommand*, int> dispatch_application_menu;
        public delegate* unmanaged[Cdecl]<byte*, int, uint, ulong, int> supports_extension;
        public delegate* unmanaged[Cdecl]<ulong, NativeExtensionCommand*, int> dispatch_extension_command;
    }



}
